# 533-Project-Group-13

./: .gitignore  README.md  demo_runner.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
retire_plan/: __init__.py
retire_plan/accounts/: __init__.py  accounts_function_details.md  models.py  profile.py
retire_plan/simulation/: README.md  __init__.py  engine.py  metrics.py  tax_system.py
retire_plan/strategies/: __init__.py  analysis.py  policies.py  strategies.md
tests/: __init__.py  test_accounts.py  test_analysis.py  test_engine.py  test_metrics.py  test_models.py  test_policies.py  test_profile.py  test_suite.py
